# mordoprojekt

./: .gitignore  Cargo.toml  LICENSE.MD  README.MD  config-default.toml  default.nix  deploy.sh  flake.nix  restart_on_crash.sh
.github/workflows/: deploy.yml
bot/: Cargo.toml
bot/src/: main.rs
migrations/: 20240102211554_initial.sql
scripts/: deploy.sh  restart_on_crash.sh
src/: commands.rs  main.rs
src/commands/: age.rs  gimper.rs  gpt.rs  mod.rs  paintdot.rs  thread.rs
