[package]
name = "mordoprojekt"
version = "0.0.1"
edition = "2021"
description = "mordoprojekt discord bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.8", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
poise = "0.6.1-rc1"
openai-api-rs = "2.1.7"
